--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Calculator</title>
 </head>
 <body>
+    <input type="number" id="number1">
+    <input type="text" id="operator">
+    <input type="number" id="number2">
+    <button id="bttn">Aprēķināt</button>
+
     
 </body>
 </html>
