--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
     <title>Calculator</title>
 </head>
 <body>
+    <h1>Calculators</h1>
+    <br>
     <input type="number" id="number1">
     <input type="text" id="operator">
     <input type="number" id="number2">
     <button id="bttn">Aprēķināt</button>
+    <p id="result"></p>
 
-    
+    <script>
+        let num1 = document.getElementById("number1");
+        let num2 = document.getElementById("number2");
+        let opera = document.getElementById("operator");
+        let btn = document.getElementById("bttn");
+        let output = document.getElementById("result")
+
+        btn.addEventListener("click")
+    </script>
 </body>
 </html>
