a few fixes added: changed <p> to <div> element added event listener

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>Calculator</title>
 </head>
 <body>
-    <h1>Calculators</h1>
+    <h1>kalkulātors</h1>
     <br>
     <input type="number" id="number1">
     <input type="text" id="operator">
     <input type="number" id="number2">
     <button id="bttn">Aprēķināt</button>
-    <p id="result"></p>
+    <div id="output"></div>
 
     <script>
         let num1 = document.getElementById("number1");
         let num2 = document.getElementById("number2");
         let opera = document.getElementById("operator");
         let btn = document.getElementById("bttn");
-        let output = document.getElementById("result")
+        let result = document.getElementById("output")
 
         btn.addEventListener("click")
     </script>
