more fixes bc my javascript wasnt good enough

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <div id="output"></div>
 
     <script>
-        let num1 = document.getElementById("number1");
-        let num2 = document.getElementById("number2");
-        let opera = document.getElementById("operator");
-        let btn = document.getElementById("bttn");
-        let result = document.getElementById("output")
+        const num1Input = document.getElementById("number1");
+        const num2Input = document.getElementById("number2");
+        const operaInput = document.getElementById("operator");
+        const btnInput = document.getElementById("bttn");
+        const outputContainer = document.getElementById("output");
 
+        
         btn.addEventListener("click")
     </script>
 </body>
