added some code to the function processInput

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         const outputContainer = document.getElementById("output");
 
         
-        btn.addEventListener("click")
+        btnInput.addEventListener("click", processInput);
+
+        function processInput() {
+            console.log("clicked");
+        }
     </script>
 </body>
 </html>
