refactoring added and is fully working

--- a/index.html
+++ b/index.html
@@ -25,30 +25,35 @@
         btnInput.addEventListener("click", processInput);
 
         function processInput() {
-            let num1Value = num1Input.value;
-            let num2Value = num2Input.value;
+            let num1Value = parseFloat(num1Input.value);
+            let num2Value = parseFloat(num2Input.value);
             let operaValue = operaInput.value;
 
-            let result;
+           let result = calculateResult(num1Value, num2Value, operaValue);
             
-            switch (operaValue) {
+          outputContainer.innerHTML = result;
+        }
+
+        function calculateResult(n1, n2, op) {
+            let result;
+            switch (op) {
                 case "+":
-                    result = num1Value + num2Value;
+                    result = n1 + n2;
                     break;
                 case "-":
-                    result = num1Value - num2Value;
+                    result = n1 - n2;
                     break;
                 case "*":
-                    result = num1Value * num2Value;
+                    result = n1 * n2;
                     break;
                 case "/":
-                    result = num1Value / num2Value;
+                    result = n1 / n2;
                     break;
 
                 default:
                     break;
             }
-            outputContainer.innerHTML = result;
+            return result;
         }
     </script>
 </body>
